fixed sizing on mobile

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -18,3 +18,17 @@
   font-size: 20px;
   color: white;
 }
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+  #footer{
+    padding: 30px 0;
+  }
+  #footer .social-icons a{
+    font-size: 20px;
+  }
+  #footer .copyright{
+    font-size: 16px;
+  }
+
+}
