--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -13,6 +13,9 @@ div.intro-text-container p{
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
+  div.intro-text-container {
+    padding: 50px 50px;
+  }
   div.intro-text-container p{
     font-size: 16px;
   }
