--- a/src/css/opening-hours.css
+++ b/src/css/opening-hours.css
@@ -20,12 +20,11 @@
   margin-bottom: 30px;
 }
 
-#opening-hours h2{
-  font-size: 40px;
-}
-
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
+  .opening-hours-text-container{
+    padding: 50px 50px;
+  }
   #opening-hours{
     display: block;
   }
