--- a/src/css/services.css
+++ b/src/css/services.css
@@ -8,7 +8,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   width: 100%;
-  max-width: 960px;
+  max-width: 1440px;
   margin: 30px auto 0;
 }
 
