--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -9,6 +9,9 @@ div.shop-text-container p{
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
+  div.shop-text-container{
+    padding: 50px 50px;
+  }
   div.shop-text-container p{
     font-size: 16px;
   }
